@startuml
'https://plantuml.com/class-diagram

interface CostStrategy {
+getCost(ShipmentOption shipmentOption) : ShipmentCost
}

class WeightedCostStrategy {
-double monetaryWeight
-double carbonWeight
-monetaryCostStrategy : MonetaryCostStrategy
-carbonCostStrategy : CarbonCostStrategy

+getCost(ShipmentOption shipmentOption) : ShipmentCost
}

class MonetaryCostStrategy {
+getCost(ShipmentOption shipmentOption) : ShipmentCost
}

class CarbonCostStrategy {
+getCost(ShipmentOption shipmentOption) : ShipmentCost
}

CostStrategy <|.. WeightedCostStrategy
CostStrategy <|.. MonetaryCostStrategy
CostStrategy <|.. CarbonCostStrategy
WeightedCostStrategy --> MonetaryCostStrategy
WeightedCostStrategy --> CarbonCostStrategy

@enduml